--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" },
-    { "src": "game.html", "use": "@vercel/static" },
-    { "src": "src/game/*", "use": "@vercel/static" }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "src/**/*", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/", "dest": "/index.html" },
